--- a/disjob-core/pom.xml
+++ b/disjob-core/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>disjob-common</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
