--- a/disjob-samples/disjob-samples-springboot-supervisor/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-supervisor/pom.xml
@@ -17,26 +17,57 @@
   <dependencies>
     <dependency>
       <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-samples-springboot-common</artifactId>
-      <version>${project.parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
-      <artifactId>disjob-samples-conf-supervisor</artifactId>
-      <version>${project.parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-id</artifactId>
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-supervisor</artifactId>
     </dependency>
+
+    <!-- spring boot web -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <!-- apache log4j2 for log implementation -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
     <finalName>${project.artifactId}</finalName>
+
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>../disjob-samples-conf</directory>
+        <includes>
+          <include>log4j2.xml</include>
+          <include>application-redis.yml</include>
+          <include>application-mysql.yml</include>
+          <include>application-supervisor.yml</include>
+          <include>application-web.yml</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
 
     <plugins>
       <plugin>
