worker-conf.yml

--- a/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
+++ b/disjob-samples/disjob-samples-frameless-worker/src/main/resources/worker-conf.yml
@@ -1,14 +1,21 @@
 server.port: 8084
 # server.servlet.context-path: app-test
 
-# Disjob worker configuration
+
+# Disjob configuration
 disjob:
+
+  # disjob http configuration
   http:
     connect-timeout: 3000
     read-timeout: 10000
+
+  # disjob retry configuration
   retry:
     max-count: 3
     backoff-period: 3000
+
+  # disjob worker configuration
   worker:
     group: app-test
     timing-wheel-tick-ms: 100
@@ -18,6 +25,8 @@ disjob:
     process-thread-pool-size: 6
     worker-token: 358678bfe34648f68b607036a27c6854
     supervisor-token: 20bb8b7f1cb94dc894b45546a7c2982f
+
+  # disjob registry configuration
   registry:
     # redis做注册中心时需要配置
     redis:
@@ -30,28 +39,28 @@ disjob:
       port: 8500
       token:
 
-# redis configuration
-disjob.redis:
-  database: 0
-  connect-timeout: 3000
-  timeout: 5000
-  lettuce:
-    pool:
-      max-active: 32
-      max-idle: 8
-      min-idle: 4
-      max-wait: 5000
-    shutdown-timeout: 5000
-  password: 123456               # redis node auth password
-  #username: node_auth           # redis node auth username(redis 6.x ACL)
+  # disjob redis configuration
+  redis:
+    database: 0
+    connect-timeout: 3000
+    timeout: 5000
+    lettuce:
+      pool:
+        max-active: 32
+        max-idle: 8
+        min-idle: 4
+        max-wait: 5000
+      shutdown-timeout: 5000
+    password: 123456               # redis node auth password
+    #username: node_auth           # redis node auth username(redis 6.x ACL)
 
-  # redis standalone config
-  host: localhost                # redis standalone host name
-  port: 6379                     # redis standalone port
+    # redis standalone config
+    host: localhost                # redis standalone host name
+    port: 6379                     # redis standalone port
 
-  # redis sentinel config
-  #sentinel:
-  #  master: REDIS_SENTINEL
-  #  nodes: 112.74.170.75:16379,112.74.170.75:16380
-  #  #password: 123456            # redis sentinel auth password
-  #  #username: sentinel_auth     # redis sentinel auth username(redis 6.x ACL)
+    # redis sentinel config
+    #sentinel:
+    #  master: REDIS_SENTINEL
+    #  nodes: 112.74.170.75:16379,112.74.170.75:16380
+    #  #password: 123456            # redis sentinel auth password
+    #  #username: sentinel_auth     # redis sentinel auth username(redis 6.x ACL)
