--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
@@ -1,4 +1,4 @@
-# database configuration：前面的`disjob.datasource`为固定前缀，后面的`disjob`为数据源名
+# database configuration：前面的`disjob.datasource`为固定前缀，后面的`disjob`为数据源名称
 disjob.datasource:
   disjob:
     driver-class-name: com.mysql.cj.jdbc.Driver
