--- a/disjob-samples/disjob-samples-springboot-worker/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-worker/pom.xml
@@ -65,8 +65,8 @@
         <directory>../disjob-samples-conf</directory>
         <includes>
           <include>log4j2.xml</include>
-          <include>application-redis.yml</include>
           <include>application-worker.yml</include>
+          <include>application-registry-redis.yml</include>
           <include>application-web.yml</include>
         </includes>
         <filtering>false</filtering>
