--- a/disjob-samples/disjob-samples-conf/application-mysql.yml
+++ b/disjob-samples/disjob-samples-conf/application-mysql.yml
@@ -2,10 +2,11 @@
 disjob.datasource:
   disjob:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+    url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
     username: disjob
     password: disjob$123456
-    minimum-idle: 2
-    maximum-pool-size: 20
-    connection-timeout: 2000
-    #connection-test-query: SELECT 1    # jdbc4不建议配置connectionTestQuery
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 20
+      connection-timeout: 2000
+      #connection-test-query: SELECT 1    # jdbc4不建议配置connectionTestQuery
