--- a/disjob-supervisor/src/test/resources/application.yml
+++ b/disjob-supervisor/src/test/resources/application.yml
@@ -5,20 +5,22 @@ server.port: 0
 disjob.datasource:
   disjob:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:23306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+    url: jdbc:mysql://localhost:23306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
     username: disjob
     password: disjob$123456
-    minimum-idle: 2
-    maximum-pool-size: 20
-    connection-timeout: 2000
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 20
+      connection-timeout: 2000
   disjob-admin:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://localhost:23306/disjob_admin?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+    url: jdbc:mysql://localhost:23306/disjob_admin?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
     username: disjob_admin
     password: disjob_admin$123456
-    minimum-idle: 2
-    maximum-pool-size: 20
-    connection-timeout: 2000
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 20
+      connection-timeout: 2000
 
 # redis configuration
 spring.redis:
