--- a/disjob-admin/pom.xml
+++ b/disjob-admin/pom.xml
@@ -35,14 +35,14 @@
     <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
 
     <spring-boot.version>2.7.18</spring-boot.version>
-    <shiro-core.version>1.13.0</shiro-core.version>
+    <shiro.version>1.13.0</shiro.version>
     <thymeleaf-extras-shiro.version>2.1.0</thymeleaf-extras-shiro.version>
     <druid-spring-boot-starter.version>1.2.24</druid-spring-boot-starter.version>
     <UserAgentUtils.version>1.21</UserAgentUtils.version>
     <kaptcha.version>2.3.3</kaptcha.version>
     <pagehelper-spring-boot-starter.version>2.1.0</pagehelper-spring-boot-starter.version>
     <fastjson.version>1.2.83</fastjson.version>
-    <oshi-core.version>6.6.5</oshi-core.version>
+    <oshi-core.version>6.6.6</oshi-core.version>
     <commons-io.version>2.18.0</commons-io.version>
     <poi-ooxml.version>5.4.0</poi-ooxml.version>
     <velocity-engine-core.version>2.4.1</velocity-engine-core.version>
@@ -115,9 +115,11 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
+          <encoding>${file.encoding}</encoding>
           <source>${java.version}</source>
           <target>${java.version}</target>
-          <encoding>${project.build.sourceEncoding}</encoding>
+          <compilerVersion>${java.version}</compilerVersion>
+          <compilerArgument>-parameters</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
