--- a/disjob-reports/pom.xml
+++ b/disjob-reports/pom.xml
@@ -110,7 +110,7 @@
         <executions>
           <execution>
             <id>jacoco-report-aggregate</id>
-            <phase>test</phase>
+            <phase>verify</phase>
             <goals>
               <goal>report-aggregate</goal>
             </goals>
