--- a/disjob-registry/disjob-registry-nacos/pom.xml
+++ b/disjob-registry/disjob-registry-nacos/pom.xml
@@ -28,6 +28,7 @@
       <version>2.5.0</version>
     </dependency>
 
+    <!-- Test dependencies -->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
