--- a/disjob-id/pom.xml
+++ b/disjob-id/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.apache.curator</groupId>
       <artifactId>curator-framework</artifactId>
-      <version>${curator-recipes.version}</version>
+      <version>${curator-framework.version}</version>
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -42,13 +42,6 @@
           <artifactId>slf4j-api</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-
-    <!-- Test -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
