--- a/disjob-test/pom.xml
+++ b/disjob-test/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>ch.vorburger.mariaDB4j</groupId>
       <artifactId>mariaDB4j</artifactId>
-      <version>${mariaDB4j.version}</version>
+      <version>2.5.3</version>
     </dependency>
     <!-- testcontainers mysql-->
     <dependency>
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>cn.ponfee</groupId>
       <artifactId>embedded-redis</artifactId>
-      <version>${embedded-redis.version}</version>
+      <version>1.4</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
