--- a/disjob-samples/disjob-samples-frameless-worker/pom.xml
+++ b/disjob-samples/disjob-samples-frameless-worker/pom.xml
@@ -19,6 +19,12 @@
       <groupId>cn.ponfee</groupId>
       <artifactId>disjob-worker</artifactId>
     </dependency>
+    <!-- 引入`disjob-test`模块中的一些内置`JobExecutor`用于测试，实际开发中应去除此依赖 -->
+    <dependency>
+      <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-test</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>org.apache.commons</groupId>
