--- a/disjob-worker/pom.xml
+++ b/disjob-worker/pom.xml
@@ -27,7 +27,7 @@
       <artifactId>disjob-dispatch-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
-    <!-- OS process operate: use by ProcessUtils -->
+    <!-- OS process operate: used by ProcessUtils -->
     <dependency>
       <groupId>net.java.dev.jna</groupId>
       <artifactId>jna-platform</artifactId>
