--- a/pom.xml
+++ b/pom.xml
@@ -187,7 +187,7 @@
         <jdk>[9,)</jdk>
       </activation>
       <properties>
-        <!-- 多个add-exports需要拆为多个compiler arg: https://zhuanlan.zhihu.com/p/640217638 -->
+        <!-- 多个`add-exports/add-opens`需要拆为多个`compiler arg`: https://zhuanlan.zhihu.com/p/640217638 -->
         <moduleExportsArgLine>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</moduleExportsArgLine>
       </properties>
     </profile>
