--- a/disjob-registry/disjob-registry-zookeeper/pom.xml
+++ b/disjob-registry/disjob-registry-zookeeper/pom.xml
@@ -52,6 +52,11 @@
       <version>${curator-framework.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
