--- a/disjob-admin/ruoyi-common/pom.xml
+++ b/disjob-admin/ruoyi-common/pom.xml
@@ -16,16 +16,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>jakarta.servlet</groupId>
-      <artifactId>jakarta.servlet-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-json</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
@@ -65,6 +55,7 @@
       <version>${shiro.version}</version>
     </dependency>
 
+    <!-- Commons third lib -->
     <dependency>
       <groupId>com.mysql</groupId>
       <artifactId>mysql-connector-j</artifactId>
@@ -90,7 +81,7 @@
       <version>${poi-ooxml.version}</version>
     </dependency>
 
-    <!-- api doc -->
+    <!-- Api doc -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
