--- a/disjob-worker/pom.xml
+++ b/disjob-worker/pom.xml
@@ -33,6 +33,13 @@
       <artifactId>jna-platform</artifactId>
       <version>5.16.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-exec</artifactId>
+      <version>1.4.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
