add alert module

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>disjob-test</module>
     <module>disjob-registry</module>
     <module>disjob-dispatch</module>
+    <module>disjob-alert</module>
     <module>disjob-supervisor</module>
     <module>disjob-worker</module>
     <module>disjob-bom</module>
